# 6DOF_Label_tool

./: .gitignore  ArUco_world.cpp  CMakeLists.txt  README.md  main.cpp
config/: world_camera_setting.json
gui/include/: Annotator.h  DataReader.h
gui/src/: Annotator.cpp  DataReader.cpp
include/: Annotation.h  DataLoader.h  LabelTool.h  grasp.h
src/: Annotation.cpp  DataLoader.cpp  LabelTool.cpp  natural_sort_test.cpp
